--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Peripherals\Wireless\CC2538RF.cs" />
     <Compile Include="Peripherals\Wireless\AT86RF233.cs" />
     <Compile Include="Peripherals\I2C\STM32F7_I2C.cs" />
+    <Compile Include="Peripherals\I2C\STM32F7_I2C_modified.cs" />
     <Compile Include="Peripherals\Input\FT5336.cs" />
     <Compile Include="Peripherals\Miscellaneous\STM32_SYSCFG.cs" />
     <Compile Include="Peripherals\Wireless\IEEE802_15_4\Frame.cs" />
